<resources>
    <string name="app_name">AppTeste</string>
    <string name="descImageView">iconMaybe</string>
    <string name="imageButton2">whiteDotsMaybe</string>
    <string name="backToHome">homeToBack</string>
    <string name="descriptionLapa">Doidaaao</string>
    <string name="lapaImgButton">lapa button image</string>
    <string name="lapaText">lapa text</string>
    <string name="tetudo">Tetudo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="containerDesc">kaka eae man</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dossie">
        "PROBLEMA\n"
        "\tA Hanggo é uma startup do ramo da alimentação, com um modelo auto intitulado mercado honesto. \n"
        "A Hanggo atua em quiosques localizados em empresas onde as pessoas que frequentam a empresa podem \n"
        "comprar comidas e bebidas e  pagar por conta própria, sem a mediação de um vendedor.\n"
        "O desafio proposto pela Hanggo trazia a necessidade e a intenção de automação e inteligência\n"
        "no processo de estoque e reabastecimento atual, que é feito de forma manual e analógica. Essa \n"
        "necessidade vinha principalmente do desejo da Hanggo de expandir seu escopo e atender a mais \n"
        "empresas. Um problema secundário foi que a Hanggo não conhecia os clientes, já que a difusão em\n"
        "diversas empresas trazia diversos perfis de clientes e a empresa não tem métodos hábeis de \n"
        "comunicação com todos.  "
        "Realizamos pesquisas com usuários no Cesar School e Cesar Tiradentes e conseguimos perceber \n"
        "que a demanda dos usuários não estava de encontro com a oferta do Hanggo. Além disso, o único \n"
        "contato da Hanggo com as empresas são os pontos focais, representantes de cada empresa que são \n"
        "responsáveis por registrar imagens dos quiosques duas vezes na semana.  "
        "Com nossas pesquisas percebemos que essa comunicação se configurava um problema mais urgente, \n"
        "já que uma expansão sem o conhecimento do cliente poderia acarretar um efeito bola de neve, \n"
        "potencialmente perigoso para a sustentabilidade do negócio. O problema que vamos investigar, \n"
        "então, é: `Como criar um sistema de comunicação efetivo para diferentes perfis de consumidor?` \n\n"

        "Hipótese do Problema\n"


        "\tA partir de nossas pesquisas estabelecemos algumas hipóteses sobre o problema de comunicação:\n"
        "\t\t* Como o Hanggo atua em diversas empresas, a capacidade da startup de captar feedback de todos\n"
        "\t esses locais é impedida pelo baixo número de colaboradores;\n"
        "\t\t* O modelo pegue e pague, sem a intervenção de um funcionário, gera distância entre usuário \n"
        "\tda empresa e não estimula a comunicação entre as partes;\n"
        "\t\t* A falta de um sistema de suporte para o usuário inibe a empresa de adquirir feedback \n"
        "\tdos usuários e assim fundamentar melhor suas demandas.\n"

                "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="logo">app logo</string>
    <string name="passwordHint">Minh@senh4</string>
    <string name="nameHint">John Doe</string>
    <string name="emailHint">meu_email@provedor.com</string>
    <string name="celHint">(12) 93456–7890</string>
    <string name="SignIn">Cadastrar</string>
    <string name="login">LOGIN</string>
    <string name="equipe">EQUIPE</string>
    <string name="gordaBtn">imageButtonOfGorda</string>
    <string name="equipeStr">EQUIPE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
</resources>