<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00645252"
    android:backgroundTint="#008B7E7E"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/firebase_database_url"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="parent" />
    <!--  take @string/firebase out if it goes wrong  -->

    <EditText
        android:id="@+id/password_field"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/mail_field"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/mail_field"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/cel_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cel_field"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="188dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/celHint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/createUserButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="114dp"
        android:layout_height="56dp"
        android:layout_marginStart="137dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#64B180"
        android:drawableTint="@android:color/transparent"

        android:text="@string/SignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="161dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/iconsq" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#64B180"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/createUserButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>